add AuditorAwareImpl for auditing support and update AuthServiceApplication to enable JPA auditing